# pso-topologies

./: .gitignore  CLAUDE.md  PSO.py  PSO_free_scale.py  PSO_mesh.py  PSO_ring.py  PSO_torus.py  PSO_tree.py  README.md  main.py  pyproject.toml  run_experiment.sh
.claude/: settings.local.json
data/: __init__.py  loader.py
data/tsplib/: __init__.py  reader.py
experiments/: __init__.py  result.py  runner.py  serialiser.py
pso/: __init__.py  base.py  factory.py
pso/operators/: __init__.py  _numba_kernels.py  apv.py  cognitive.py  default.py  stagnation_explore.py  swu.py
topologies/: __init__.py  base.py  dynamic_similarity.py  free_scale.py  global_.py  mesh.py  ring.py  torus.py  tree.py
