[project]
name = "phd-pso-tsp"
version = "0.1.0"
description = "PSO applied to TSP problems — PhD research"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.0",
    "numba>=0.61",
    "scipy>=1.15",
    "networkx>=2.1",
    "tsplib95>=0.7",
    "matplotlib>=3.10",
    "pandas>=2.2",
    "scikit-posthocs>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pso", "data", "topologies"]

[dependency-groups]
dev = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
]
